--- a/QGLViewer/VRenderInterface.ui
+++ b/QGLViewer/VRenderInterface.ui
@@ -6,18 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>306</width>
-    <height>191</height>
+    <width>309</width>
+    <height>211</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Vectorial rendering options</string>
   </property>
   <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
+   <property name="leftMargin">
+    <number>5</number>
    </property>
-   <property name="margin">
+   <property name="topMargin">
+    <number>5</number>
+   </property>
+   <property name="rightMargin">
+    <number>5</number>
+   </property>
+   <property name="bottomMargin">
     <number>5</number>
    </property>
    <item>
@@ -72,10 +78,16 @@
    </item>
    <item>
     <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+     <property name="leftMargin">
+      <number>11</number>
      </property>
-     <property name="margin">
+     <property name="topMargin">
+      <number>11</number>
+     </property>
+     <property name="rightMargin">
+      <number>11</number>
+     </property>
+     <property name="bottomMargin">
       <number>11</number>
      </property>
      <item>
@@ -138,12 +150,6 @@
    </item>
    <item>
     <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
      <item>
       <widget class="QPushButton" name="SaveButton">
        <property name="text">
